# cpp_exercises

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
ModernCPPChallenge/: CMakeLists.txt  runTests.sh
ModernCPPChallenge/Chapter2/: CMakeLists.txt  ipv4.cc  ipv4.hh  string_split.cc  string_split.hh  test.cc
data/MCCC/Chapter2/: ipv4.in
